apps/saleor/base/service-storefront.yaml
# Saleor Base: Storefront Service

apiVersion: v1
kind: Service
metadata:
  name: storefront-svc
  namespace: kyeol
  labels:
    app: storefront
    app.kubernetes.io/name: storefront
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: storefront
